app7DataMasking/microservice4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app7-microservice4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app7-microservice4
  template:
    metadata:
      labels:
        app: app7-microservice4
    spec:
      containers:
      - name: app7-microservice4
        image: b0rkemborina/zta-cybersec-suite:app7microservice4
        ports:
        - containerPort: 8063
