app7DataMasking/microservice4/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app7-microservice4
spec:
  selector:
    app: app7-microservice4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8063
  type: ClusterIP
