app7DataMasking/microservice4/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app7-microservice4
spec:
  selector:
    matchLabels:
      app: app7-microservice4
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app7-microservice1"
        ]
